[package]
name = "async-serial"
version = "0.1.0"
authors = ["Ben Wolsieffer <benwolsieffer@gmail.com>", "Zac Berkowitz <zac.berkowitz@gmail.com>"]
description = "An async serial port implementation"
license = "MIT"
repository = "https://github.com/lopsided98/async-serial"
documentation = "http://docs.rs/async-serial"
readme = "README.md"
keywords = ["rs232", "serial"]
categories = ["asynchronous", "hardware-support"]
edition = "2018"

[package.metadata]
msrv = "1.46.0"

[dependencies]
async-io = "1.12.0"
futures = "0.3"
mio-serial = { version = "5.0.5", default-features = false }

[features]
default = []
libudev = ["mio-serial/libudev"]

[[example]]
name = "serial_println"
path = "examples/serial_println.rs"
